--- a/index.html
+++ b/index.html
@@ -20,16 +20,11 @@
   <div>
     <div class="row">
       <div class="span8">
-        <h1>시간 기반 일회용 비밀번호 알고리즘(OTP)</h1>
-        <p>사용자별로 base32 비밀키를 db에 가지고 있고 이를 이용해서 qr 코드 및 인증 코드를 생성합니다.</p>
-        <p>비밀키는 길이의 제한이 없지만 보통 16자리를 사용하는것 같습니다. </p>
-        <p>사용자 별로 QR 코드 는 다르게 생성됩니다. </p>
-        <p>QR코드 이미지 생성시에만 google 과 네트워크 통신을 하고 인증코드등은 시간기반으로 변경됩니다.</p>
-        <p>개인별로 고유한 비밀키를 가져야하므로,고유한 아이디값등으로 생성하면 될 것 같습니다. </p>
         <p>
-          디비는 mysql을 사용하는 것을 제안드립니다. 가장널리 사용되는 DB 이고, 무료입니다. 
+          DB는 PostgreSQL 을 사용하는 것을 제안드립니다. 라이센스 문제가 전혀없습니다.
+          MySQL은 오픈 소스 라이센스를 따르기는 하지만, 상업적으로 사용할 때는 상업용 라이센스를 구입해야만 합니다. 
 
-          초기 비용이 저렴하고 사용량에 따라 추가 확장이 용이한 aws EC2 서비스를 사용하여 개발하겠습니다. 
+          서버는 초기 비용이 저렴하고 사용량에 따라 추가 확장이 용이한 aws EC2 서비스를 사용하여 개발하는 것을 추천드립니다. 비용이 시간별로 사용량만큼 책정되고 사용하지 않을때는 비용이 부담되지 않습니다. 
 
           어플리케이션은 java springframework 을 사용하여 구현하겠습니다.
 
