--- a/index.html
+++ b/index.html
@@ -3,54 +3,310 @@
 
 <head>
   <meta charset="utf-8">
-  <title>gpx test</title>
+  <title>otp test</title>
   <!-- <base href="/"> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+
   
   <script  src="https://code.jquery.com/jquery-1.6.4.min.js"  integrity="sha256-lR1rrjnrFy9XqIvWhvepIc8GD9IfWWSPDSC2qPmPxaU="  crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=aaLTGpJef0JH1DLHdvZC"></script>
-
+  <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+  <script src="https://caligatio.github.io/jsSHA/sha.js"></script>
 </head>
 
 <body>
-  <p>
-    DB는 PostgreSQL 을 사용하는 것을 제안드립니다. 라이센스 문제가 전혀없습니다.
-    MySQL은 오픈 소스 라이센스를 따르기는 하지만, 상업적으로 사용할 때는 상업용 라이센스를 구입해야만 합니다. 
 
-    서버는 초기 비용이 저렴하고 사용량에 따라 추가 확장이 용이한 aws EC2 서비스를 사용하여 개발하는 것을 추천드립니다. 비용이 시간별로 사용량만큼 책정되고 사용하지 않을때는 비용이 부담되지 않습니다. 
+<div class="container-fluid">
+  <div>
+    <div class="row">
+      <div class="span8">
+        <h1>시간 기반 일회용 비밀번호 알고리즘(OTP)</h1>
+        <p>사용자별로 base32 비밀키를 db에 가지고 있고 이를 이용해서 qr 코드 및 인증 코드를 생성합니다.</p>
+        <p>비밀키는 길이의 제한이 없지만 보통 16자리를 사용하는것 같습니다. </p>
+        <p>사용자 별로 QR 코드 는 다르게 생성됩니다. </p>
+        <p>QR코드 이미지 생성시에만 google 과 네트워크 통신을 하고 인증코드등은 시간기반으로 변경됩니다.</p>
+        <p>개인별로 고유한 비밀키를 가져야하므로,고유한 아이디값등으로 생성하면 될 것 같습니다. </p>
+      </div>
+    </div>
+    <div class="row">
 
-    어플리케이션은 java springframework 을 사용하여 구현하겠습니다.
+      <form>
+        <fieldset>
+            <div class="clearfix">
+                <label for="secret">사용자 id</label>
+                <div class="input">
+                  <input type="text" size="30" maxlength="20" name="userID" id="userID" class="xlarge" value="" />
+                </div>
+              </div>
+          <div class="clearfix">
+            <label for="secret">Secret (base32) - 비밀키</label>
+            <div class="input">
+              <!-- <input type="text" size="30" name="secret" id="secret" class="xlarge" value="JBSWY3DPEHPK3PXP" /> -->
+              <input type="text" size="30" name="secret" id="secret" class="xlarge" value="" />
+            </div>
+          </div>
+          <!-- /clearfix -->
+          <!-- <div class="clearfix">
+            <label>Secret (hex)</label>
+            <div class="input">
+              <span class="label label-default" id="secretHex"></span>
+              <span id='secretHexLength'></span>
+            </div>
+          </div> -->
+          <!-- /clearfix -->
+          <div class="clearfix">
+            <label>QR Code</label>
+            <div class="input">
+              <img id="qrImg" src="" />
+            </div>
+          </div>
+          <!-- /clearfix -->
+          <!-- <div class="clearfix">
+            <label>Unix epoch div 30 (padded hex)</label>
+            <div class="input">
+              <span class="label label-default" id='epoch'></span>
+            </div>
+          </div> -->
+          <!-- /clearfix -->
+          <!-- <div class="clearfix">
+            <label>HMAC(secret, time)</label>
+            <div class="input" id='hmac'></div>
+          </div> -->
+          <!-- /clearfix -->
+          <div class="clearfix">
+            <label>One-time Password - 인증번호</label>
+            <div class="input">
+              <span class="label label-primary" id='otp'></span>
+            </div>
+          </div>
+          <!-- /clearfix -->
+          <div class="clearfix">
+            <label>Updating in - 30초마다 인증번호 변경됨.</label>
+            <div class="input">
+              <span id='updatingIn'></span>
+            </div>
+          </div>
+          <!-- /clearfix -->
 
-    사용하여 개발된 내용을 사장님과 공유 하겠습니다. 
 
-    기획서 보니까 깔끔하게 잘되어있어서 제안드립니다. 
-  </p>
-
-<div id="map" style="height: 500px;"></div>
+        </fieldset>
+      </form>
+    </div>
+  </div>
+</div>
 
 </body>
 
 </html>
-  <script>
-    var map = new naver.maps.Map(document.getElementById('map'), {
-      zoom: 7,
-      mapTypeId: 'normal',
-      center: new naver.maps.LatLng(38.1361378, 128.4021238)
-  });
+<script>
+  function dec2hex(s) { return (s < 15.5 ? '0' : '') + Math.round(s).toString(16); }
+  function hex2dec(s) { return parseInt(s, 16); }
 
-  var HOME_PATH = window.HOME_PATH || '.';
+  function base32tohex(base32) {
+    var base32chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ234567";
+    var bits = "";
+    var hex = "";
 
-  $.ajax({
-      url: 'https://navermaps.github.io/maps.js/docs/data/seorak.gpx',
-      dataType: 'xml',
-      success: startDataLayer
-  });
+    for (var i = 0; i < base32.length; i++) {
+      var val = base32chars.indexOf(base32.charAt(i).toUpperCase());
+      bits += leftpad(val.toString(2), 5, '0');
+    }
 
-  function startDataLayer(xmlDoc) {
-      map.data.addGpx(xmlDoc);
+    for (var i = 0; i + 4 <= bits.length; i += 4) {
+      var chunk = bits.substr(i, 4);
+      hex = hex + parseInt(chunk, 2).toString(16);
+    }
+    return hex;
+
   }
+
+  function leftpad(str, len, pad) {
+    if (len + 1 >= str.length) {
+      str = Array(len + 1 - str.length).join(pad) + str;
+    }
+    return str;
+  }
+
+  function updateOtp() {
+
+    var key = base32tohex($('#secret').val());
+    var epoch = Math.round(new Date().getTime() / 1000.0);
+    var time = leftpad(dec2hex(Math.floor(epoch / 30)), 16, '0');
+
+    // updated for jsSHA v2.0.0 - http://caligatio.github.io/jsSHA/
+    var shaObj = new jsSHA("SHA-1", "HEX");
+    shaObj.setHMACKey(key, "HEX");
+    shaObj.update(time);
+    var hmac = shaObj.getHMAC("HEX");
+
+    $('#qrImg').attr('src', 'https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl=200x200&chld=M|0&cht=qr&chl=otpauth://totp/박기현%3Fsecret%3D' + $('#secret').val());
+    $('#secretHex').text(key);
+    $('#secretHexLength').text((key.length * 4) + ' bits');
+    $('#epoch').text(time);
+    $('#hmac').empty();
+
+    if (hmac == 'KEY MUST BE IN BYTE INCREMENTS') {
+      $('#hmac').append($('<span/>').addClass('label important').append(hmac));
+    } else {
+      var offset = hex2dec(hmac.substring(hmac.length - 1));
+      var part1 = hmac.substr(0, offset * 2);
+      var part2 = hmac.substr(offset * 2, 8);
+      var part3 = hmac.substr(offset * 2 + 8, hmac.length - offset);
+      if (part1.length > 0) $('#hmac').append($('<span/>').addClass('label label-default').append(part1));
+      $('#hmac').append($('<span/>').addClass('label label-primary').append(part2));
+      if (part3.length > 0) $('#hmac').append($('<span/>').addClass('label label-default').append(part3));
+    }
+
+    var otp = (hex2dec(hmac.substr(offset * 2, 8)) & hex2dec('7fffffff')) + '';
+    otp = (otp).substr(otp.length - 6, 6);
+
+    $('#otp').text(otp);
+  }
+
+  function timer() {
+    var epoch = Math.round(new Date().getTime() / 1000.0);
+    var countDown = 30 - (epoch % 30);
+    if (epoch % 30 == 0) updateOtp();
+    $('#updatingIn').text(countDown);
+
+  }
+
+  $(function () {
+    updateOtp();
+
+    $('#update').click(function (event) {
+      updateOtp();
+      event.preventDefault();
+    });
+
+    $('#secret').keyup(function () {
+      updateOtp();
+    });
+
+    $('#userID').keyup(function () {
+      console.log(leftpad($('#userID').val(),'1','!'));
+      $('#secret').val(Conversions.base32.encode(leftpad($('#userID').val(),'1','!')));
+      updateOtp();
+    });
+
+    setInterval(timer, 1000);
+  });
+
+  // Note that we assume ascii strings, not unicode.
+  // A better implementation should use array buffers
+  // of bytes, and force a conversion before executing,
+  // and convert outputs back into strings.
+  (function(exports) {
+      var base32 = {
+          a: "ABCDEFGHIJKLMNOPQRSTUVWXYZ234567",
+          pad: "",
+          encode: function (s) {
+              var a = this.a;
+              var pad = this.pad;
+              var len = s.length;
+              var o = "";
+              var w, c, r=0, sh=0;
+              for(i=0; i<len; i+=5) {
+                  // mask top 5 bits
+                  c = s.charCodeAt(i);
+                  w = 0xf8 & c;
+                  o += a.charAt(w>>3);
+                  r = 0x07 & c;
+                  sh = 2;
+
+                  if ((i+1)<len) {
+                      c = s.charCodeAt(i+1);
+                      // mask top 2 bits
+                      w = 0xc0 & c;
+                      o += a.charAt((r<<2) + (w>>6));
+                      o += a.charAt( (0x3e & c) >> 1 );
+                      r = c & 0x01;
+                      sh = 4;
+                  }
+                  
+                  if ((i+2)<len) {
+                      c = s.charCodeAt(i+2);
+                      // mask top 4 bits
+                      w = 0xf0 & c;
+                      o += a.charAt((r<<4) + (w>>4));
+                      r = 0x0f & c;
+                      sh = 1;
+                  }
+
+                  if ((i+3)<len) {
+                      c = s.charCodeAt(i+3);
+                      // mask top 1 bit
+                      w = 0x80 & c;
+                      o += a.charAt((r<<1) + (w>>7));
+                      o += a.charAt((0x7c & c) >> 2);
+                      r = 0x03 & c;
+                      sh = 3;
+                  }
+
+                  if ((i+4)<len) {
+                      c = s.charCodeAt(i+4);
+                      // mask top 3 bits
+                      w = 0xe0 & c;
+                      o += a.charAt((r<<3) + (w>>5));
+                      o += a.charAt(0x1f & c);
+                      r = 0;
+                      sh = 0;
+                  } 
+              }
+              // Calculate length of pad by getting the 
+              // number of words to reach an 8th octet.
+              if (r!=0) { o += a.charAt(r<<sh); }
+              var padlen = 8 - (o.length % 8);
+              // modulus 
+              if (padlen==8) { return o; }
+              if (padlen==1) { return o + pad; }
+              if (padlen==3) { return o + pad + pad + pad; }
+              if (padlen==4) { return o + pad + pad + pad + pad; }
+              if (padlen==6) { return o + pad + pad + pad + pad + pad + pad; }
+              console.log('there was some kind of error');
+              console.log('padlen:'+padlen+' ,r:'+r+' ,sh:'+sh+', w:'+w);
+          },
+          decode: function(s) {
+              var len = s.length;
+              var apad = this.a + this.pad;
+              var v,x,r=0,bits=0,c,o='';
+
+              s = s.toUpperCase();
+
+              for(i=0;i<len;i+=1) {
+                  v = apad.indexOf(s.charAt(i));
+                  if (v>=0 && v<32) {
+                      x = (x << 5) | v;
+                      bits += 5;
+                      if (bits >= 8) {
+                          c = (x >> (bits - 8)) & 0xff;
+                          o = o + String.fromCharCode(c);
+                          bits -= 8;
+                      }
+                  }
+              }
+              // remaining bits are < 8
+              if (bits>0) {
+                  c = ((x << (8 - bits)) & 0xff) >> (8 - bits);
+                  // Don't append a null terminator.
+                  // See the comment at the top about why this sucks.
+                  if (c!==0) {
+                      o = o + String.fromCharCode(c);
+                  }
+              }
+              return o;
+          }
+      };
+
+      var base32hex = {
+          a: '0123456789ABCDEFGHIJKLMNOPQRSTUV',
+          pad: '=',
+          encode: base32.encode,
+          decode: base32.decode
+      };
+      exports.base32 = base32;
+      exports.base32hex = base32hex;
+  })(this.Conversions = {});
   
 </script>
