--- a/googlemap/index.html
+++ b/googlemap/index.html
@@ -28,7 +28,7 @@
         background-position: center;
       }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
     <script>
       /* Map functions */
 
@@ -164,21 +164,21 @@
       <div id="drop-container"><div id="drop-silhouette"></div></div>
     </div>
     <button onclick="loadGeoCode(11);">서울</button>
-    <button onclick="loadGeoCode(41);">경기</button>
+    <button onclick="loadGeoCode(41);">경기도</button>
     <button onclick="loadGeoCode(28);">인천</button>
     <button onclick="loadGeoCode(42110);">춘천</button>
-    <button onclick="loadGeoCode(42);">강원</button>
-    <button onclick="loadGeoCode(11);">충북</button>
-    <button onclick="loadGeoCode(11);">충남</button>
-    <button onclick="loadGeoCode(11);">울산</button>
-    <button onclick="loadGeoCode(11);">경북</button>
-    <button onclick="loadGeoCode(11);">경남</button>
-    <button onclick="loadGeoCode(11);">부산</button>
-    <button onclick="loadGeoCode(11);">대전</button>
-    <button onclick="loadGeoCode(11);">대구</button>
-    <button onclick="loadGeoCode(11);">전북</button>
-    <button onclick="loadGeoCode(11);">광주</button>
-    <button onclick="loadGeoCode(11);">제주</button>
+    <button onclick="loadGeoCode(42);">강원도</button>
+    <button onclick="loadGeoCode(43);">충청북도</button>
+    <button onclick="loadGeoCode(44);">충청남도</button>
+    <button onclick="loadGeoCode(31);">울산</button>
+    <button onclick="loadGeoCode(47);">경상북도</button>
+    <button onclick="loadGeoCode(48);">경상남도</button>
+    <button onclick="loadGeoCode(26);">부산</button>
+    <button onclick="loadGeoCode(30);">대전</button>
+    <button onclick="loadGeoCode(27);">대구</button>
+    <button onclick="loadGeoCode(4546);">전라도</button>
+    <button onclick="loadGeoCode(29);">광주</button>
+    <button onclick="loadGeoCode(50);">제주</button>
     
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXRm0tSvQCEF6FyTnq-wL0cGfLSbfJghg&callback=initialize"></script>
   </body>
