액면분할 정보 추가

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
   <br>
   <br>
   <br>
-  액면 분할 이슈 있음 ex) 삼성전자 2년전? 1주당 250만원 대 였음
+  <!-- 액면 분할 이슈 있음 ex) 삼성전자 2년전? 1주당 250만원 대 였음 -->
+  <strong>액면분할 정보 yahoo finance 에서 제공하는데 정확하진 않음(위에 버튼 누르면 정보 나옴)</strong>
   <br>
-  종목별 액면분할 자료를 못찾음
+  <!-- 종목별 액면분할 자료를 못찾음 -->
+  <div id="result_split"></div>
 </body>
 </html>
 <script>
@@ -53,6 +55,21 @@
       if(!result.accumul) alert('자료없음');
       var str = '누적금 :' + result.accumul + '<br> 수익률 :' + result.yield + '% <br> 그당시 시세 :' + result.oldPrice + ' <br> 현재 시세 :' + result.currentPrice + ' <br> 보유 주식 수량 :' + result.buyCount
       $('#result').html(str);
+    }).catch((Error)=>{
+      console.log(Error);
+    })
+
+    axios.get('https://no1-node.herokuapp.com/api/finance/' + code + '.KS/2020-01-01/2020-01-03').then((res)=>{
+      var result = res.data;
+      console.log(result);
+      if(result.defaultKeyStatistics.lastSplitFactor){
+        var strHtml = '';
+        strHtml += '마지막 액면 분할 비율: ' + result.defaultKeyStatistics.lastSplitFactor + '<br>'
+        strHtml += '마지막 액면 분할 날짜: ' + result.defaultKeyStatistics.lastSplitDate
+        $('#result_split').html(strHtml);
+      }else{
+        $('#result_split').html('마지막 액면분할 정보 없음');
+      }
     }).catch((Error)=>{
       console.log(Error);
     })
