--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
   <div id="result"></div>
   <br>
+  <div id="result_split"></div>
   <br>
   <br>
   <!-- 액면 분할 이슈 있음 ex) 삼성전자 2년전? 1주당 250만원 대 였음 -->
-  <strong>액면분할 정보 yahoo finance 에서 제공하는데 정확하진 않음(위에 버튼 누르면 정보 나옴)</strong>
-  <br>
+  <strong>액면분할 정보 yahoo finance 에서 제공하는데 정확하진 않음</strong>
   <!-- 종목별 액면분할 자료를 못찾음 -->
-  <div id="result_split"></div>
+  
 </body>
 </html>
 <script>
