--- a/google-login.html
+++ b/google-login.html
@@ -70,6 +70,7 @@ var uiConfig = {
 
 firebase.auth().onAuthStateChanged(function(user) {
 	if (user) {
+		console.log(user)
 		user.providerData.forEach(function (profile) {
 			console.log("Sign-in provider: " + profile.providerId);
 			console.log("	Provider-specific UID: " + profile.uid);
