--- a/google-login.html
+++ b/google-login.html
@@ -69,6 +69,14 @@ var uiConfig = {
 };
 
 firebase.auth().onAuthStateChanged(function(user) {
+	firebase.auth().currentUser.getIdToken(true).then(function(idToken) {
+		// Send token to your backend via HTTPS
+		// ...
+		console.log(idToken);
+	}).catch(function(error) {
+		// Handle error
+	});	
+
 	if (user) {
 		console.log(user)
 		user.providerData.forEach(function (profile) {
