--- a/google-login-yogi.html
+++ b/google-login-yogi.html
@@ -49,6 +49,8 @@
 //Initialize the FirebaseUI Widget using Firebase.
 var ui = new firebaseui.auth.AuthUI(firebase.auth());
 
+ui.start('#firebaseui-auth-container', uiConfig);
+
 var uiConfig = {
 	callbacks: {
 		signInSuccessWithAuthResult: function(authResult, redirectUrl) {
