--- a/google-login.html
+++ b/google-login.html
@@ -16,22 +16,14 @@
 	
 	<script>
 		// Your web app's Firebase configuration
-		// var firebaseConfig = {
-		// 	apiKey: "AIzaSyApEdVKkcSif3prdfZSZFB8ONRPbyYOwTI",
-		// 	authDomain: "alert-billing.firebaseapp.com",
-		// 	databaseURL: "https://alert-billing.firebaseio.com",
-		// 	projectId: "alert-billing",
-		// 	storageBucket: "alert-billing.appspot.com",
-		// 	messagingSenderId: "298647136956",
-		// 	appId: "1:298647136956:web:47613f0c82e619f280feb9"
-		// };
 		var firebaseConfig = {
-			apiKey: "AIzaSyBp7uMxZKbmbB28Hbfx99sJ-UdGDtM4UDw",
-			authDomain: "should-have-bought.firebaseapp.com",
-			projectId: "should-have-bought",
-			storageBucket: "should-have-bought.appspot.com",
-			messagingSenderId: "776376064068",
-			appId: "1:776376064068:web:26cf4188c8811372a1c411"
+			apiKey: "AIzaSyApEdVKkcSif3prdfZSZFB8ONRPbyYOwTI",
+			authDomain: "alert-billing.firebaseapp.com",
+			databaseURL: "https://alert-billing.firebaseio.com",
+			projectId: "alert-billing",
+			storageBucket: "alert-billing.appspot.com",
+			messagingSenderId: "298647136956",
+			appId: "1:298647136956:web:47613f0c82e619f280feb9"
 		};
 		// Initialize Firebase
 		firebase.initializeApp(firebaseConfig);
