--- a/google-login-rtls.html
+++ b/google-login-rtls.html
@@ -41,6 +41,7 @@
 	<div id="firebaseui-auth-container"></div>
 	<div id="loader">Loading...</div>
 	<textarea id="userInfo" style="width:800px; height: 200px;"></textarea>
+	<div id="recaptcha-container"></div>
 </body>
 </html>
 
