--- a/cookie-check.html
+++ b/cookie-check.html
@@ -21,7 +21,7 @@
 
     document.writeln(window.location.href);
 
-    // document.writeln(listCookies());
-    listCookies().forEach(element => document.writeln(element));
+    document.writeln('cookie - ' + document.cookie);
+    // listCookies().forEach(element => document.writeln(element));
   </script>
 </body>
