--- a/cookie-check.html
+++ b/cookie-check.html
@@ -32,9 +32,9 @@
         return arr;
     }
 
-    document.writeln(window.location.href);
+    document.writeln(window.location.href + '<br>');
 
-    document.writeln('cookie - ' + document.cookie);
-    // listCookies().forEach(element => document.writeln(element));
+    // document.writeln('cookie - ' + document.cookie);
+    listCookies().forEach(element => document.writeln(element) + '<br>');
   </script>
 </body>
