--- a/share.html
+++ b/share.html
@@ -7,21 +7,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script>
-    function test(){
-      window.open('https://www.facebook.com/sharer/sharer.php?u=https://naver.com/')
+    function shareFacebook(){
+      var url = encodeURIComponent(location.href);
+      window.open('https://www.facebook.com/sharer/sharer.php?u=' + url);
     }
+
+    function copyToClipBoard(){
+      navigator.clipboard.writeText(location.href)
+          .then(() => {
+          alert("url 을 복사하였습니다.");
+      })
+          .catch(err => {
+            alert('Something went wrong', err);
+      })
+    }
+    
   </script>
 </head>
 <body>
-  <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v15.0" nonce="INZ7SY8U"></script>
-
-  <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">공유</a></div>
-  
-  <br><br><br>
-
   <div className="Facebook">
-    <button onclick="test()">페이스북 공유</button>
+    <button onclick="shareFacebook()">페이스북 공유</button>
   </div>
+  <br><br>
+  <button onclick="copyToClipBoard()">공유하기(현재 페이지 url 복사)</button>
+  <br><br>
+
+<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.1.0/kakao.min.js"
+integrity="sha384-dpu02ieKC6NUeKFoGMOKz6102CLEWi9+5RQjWSV0ikYSFFd8M3Wp2reIcquJOemx" crossorigin="anonymous"></script>
+<script>
+  Kakao.init('85a0a4282e59b38d112f861ad58d388c'); // 사용하려는 앱의 JavaScript 키 입력
+</script>
+
+<a id="kakaotalk-sharing-btn" href="javascript:;">
+  <img src="https://developers.kakao.com/assets/img/about/logos/kakaotalksharing/kakaotalk_sharing_btn_medium.png"
+    alt="카카오톡 공유 보내기 버튼" />
+</a>
+
+<script>
+  Kakao.Share.createDefaultButton({
+    container: '#kakaotalk-sharing-btn',
+    objectType: 'feed',
+    content: {
+      title: '딸기 치즈 케익',
+      description: '#케익 #딸기 #삼평동 #카페 #분위기 #소개팅',
+      imageUrl:
+        'http://k.kakaocdn.net/dn/Q2iNx/btqgeRgV54P/VLdBs9cvyn8BJXB3o7N8UK/kakaolink40_original.png',
+      link: {
+        // [내 애플리케이션] > [플랫폼] 에서 등록한 사이트 도메인과 일치해야 함
+        mobileWebUrl: 'https://developers.kakao.com',
+        webUrl: 'https://developers.kakao.com',
+      },
+    },
+    social: {
+      likeCount: 286,
+      commentCount: 45,
+      sharedCount: 845,
+    },
+    buttons: [
+      {
+        title: '웹으로 보기',
+        link: {
+          mobileWebUrl: 'https://developers.kakao.com',
+          webUrl: 'https://developers.kakao.com',
+        },
+      },
+      {
+        title: '앱으로 보기',
+        link: {
+          mobileWebUrl: 'https://developers.kakao.com',
+          webUrl: 'https://developers.kakao.com',
+        },
+      },
+    ],
+  });
+</script>
+
 
 </body>
